--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
                 <sonar.login>08ee4c45f9c48afb017ad9d2e3b459587f71cca8</sonar.login>
-		<sonar.organisation>KvK Sonar Server</sonar.organisation>
+		<sonar.organization>KvK Sonar Server</sonar.organization>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
