--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
-                <sonar.login>08ee4c45f9c48afb017ad9d2e3b459587f71cca8</sonar.login>
-		<sonar.organization>KvK_Sonar_Server</sonar.organization>
+                <sonar.login>263a7dce61b4ce0b410ebd9daa7e4c01f1d54d30</sonar.login>
+		<sonar.organization>sonarserver</sonar.organization>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
