--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
                 <sonar.login>6ddf8d0ab2bf24d6b76ae1c6f98345358174326f</sonar.login>
+		<!--
+		<sonar.login>sonar</sonar.login>
+		<sonar.password>sonar</sonar.password>
+		-->
 		<sonar.organization>sonarserver</sonar.organization>
 		<sonar.projectKey>SonarServer</sonar.projectKey>
 		
