--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.kvk_soln</groupId>
+	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -12,24 +12,35 @@
 	<description>Maven Web Project for Java Programming Language</description>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.com/</url>
+		<name>KvK Soln</name>
+		<url>http://kvksoln.com/</url>
 	</organization>
 
 	<properties>
-		<jdk.version>1.8</jdk.version>
+		<!--<jdk.version>1.8</jdk.version>-->
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>https://sonarcloud.io/project/configuration?id=com.kvk_soln</sonar.host.url>
-                <sonar.login>08ee4c45f9c48afb017ad9d2e3b459587f71cca8</sonar.login>
+		<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
+                <sonar.login>6ddf8d0ab2bf24d6b76ae1c6f98345358174326f</sonar.login>
+		<!--
+		<sonar.login>sonar</sonar.login>
+		<sonar.password>sonar</sonar.password>
+		-->
+		<sonar.organization>sonarserver</sonar.organization>
+		<sonar.projectKey>SonarServer</sonar.projectKey>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 	</properties>
-
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<url>http://3.111.214.133:8081/repository/Sample_Proj_Group_Repo/</url>
+		</repository>
+	</repositories>	
 	<dependencies>
 		
 		<dependency>
@@ -99,16 +110,17 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://43.204.144.34:9980/mithuntechnologies/repository/walmart-releases/</url>
+	      <url>http://3.111.214.133:8081/repository/Sample_Proj_Release_Repo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://43.204.144.34:9980/mithuntechnologies/repository/walmart-snapshot/</url>
+	      <url>http://3.111.214.133:8081/repository/Sample_Proj_Snapshot_Repo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
+
 	
 	<build>
 		<finalName>maven-web-application</finalName>
@@ -146,10 +158,7 @@
 					<wtpversion>2.0</wtpversion>
 					<wtpContextName>maven-web-application</wtpContextName>
 				</configuration>
-			</plugin>
-			
-</plugins>
+			</plugin>		
+		</plugins>
 	</build>
-	
-	
 </project>
