--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,12 @@
 					<wtpversion>2.0</wtpversion>
 					<wtpContextName>maven-web-application</wtpContextName>
 				</configuration>
-			</plugin>		
+			</plugin>
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>sonar-maven-plugin</artifactId>
+			    <version>3.0.2</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
