--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+		<dependency>
+		    <groupId>org.sonarsource.scanner.maven</groupId>
+		    <artifactId>sonar-maven-plugin</artifactId>
+		    <version>3.0.2</version>
+		</dependency>
+
 		
 		<!-- test dependencies -->
 		<dependency>
