--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			    <groupId>org.sonarsource.scanner.maven</groupId>
+			    <groupId>org.codehaus.mojo</groupId>
 			    <artifactId>sonar-maven-plugin</artifactId>
 			    <version>3.0.2</version>
 			</plugin>
