--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 	<repositories>
 		<repository>
 			<id>nexus</id>
-			<url>http://localhost:8081/repository/Sample_Proj_Group_Repo/</url>
+			<url>http://3.110.160.214:8081/repository/Sample_Proj_Group_Repo/</url>
 		</repository>
 	</repositories>	
 	<dependencies>
@@ -110,13 +110,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/Sample_Proj_Release_Repo/</url>
+	      <url>http://3.110.160.214:8081/repository/Sample_Proj_Release_Repo/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://localhost:8081/repository/Sample_Proj_Snapshot_Repo/</url>
+	      <url>http://3.110.160.214:8081/repository/Sample_Proj_Snapshot_Repo/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
