--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://localhost:9000/</sonar.host.url>
                 <sonar.login>squ_9ae8e6e6153412426568ede21654a4518df9dd0b</sonar.login>
-		<sonar.projectKey>KvK-Solns</sonar.projectKey>		
+		<sonar.projectKey>KvK-Solutions</sonar.projectKey>		
 		<!--
 		Git Token==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
 		<sonar.login>sonar</sonar.login>
