--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
-	<!--<version>0.0.1</version>-->
+	<version>0.0.1-SNAPSHOT</version>
+	<!--<version>0.0.1-SNAPSHOT</version>-->
 	<packaging>war</packaging>
 	
 	<name>maven-web-application</name>
